posiGen_FullsendBox/src/objects/Systems__c.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <description>Full case-safe ID for the related Account (for PV Production rollup)</description>
        <formula>CASESAFEID(Install_Project_Created_On__r.Opportunity__r.Account.Id)</formula>
        <inlineHelpText>Full case-safe ID for the related Account (for PV Production rollup)</inlineHelpText>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_For_Redeployment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For Redeployment?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commissioned_Date__c</fullName>
        <label>Commissioned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_of_Ascent_Sales_Order_Created_By__c</fullName>
        <label>Copy of Ascent Sales Order Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_of_Ascent_Sales_Order_Numeric_ID__c</fullName>
        <label>Copy of Ascent Sales Order Numeric ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_of_Ascent_Sales_Order_Ship_Date__c</fullName>
        <label>Copy of Ascent Sales Order Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Count_of_Serialized_Items__c</fullName>
        <label>Count of Serialized Items</label>
        <summaryForeignKey>System_Serialized_Item__c.System__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Days_Since_Reservation_Date__c</fullName>
        <formula>Today () -  Reservation_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Reservation Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Import_ID__c</fullName>
        <description>Used to faciliate the importing of the system and children records</description>
        <label>Import ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inst_Proj_CreatedOn_Sub_Inv__c</fullName>
        <description>Subcontractor Invoice Number from the PV Install Project this system was created on.</description>
        <formula>Install_Project_Created_On__r.Subcontractor_Invoice_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Subcontractor Invoice Number from the PV Install Project this system was created on.</inlineHelpText>
        <label>Inst Proj CreatedOn Sub Inv</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Project_Created_On__c</fullName>
        <inlineHelpText>This is the install project the system was initially created on.</inlineHelpText>
        <label>Install Project Created On</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>PV Install</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Systems Created For This Install</relationshipLabel>
        <relationshipName>Systems_Created_For_This_Install</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Last_1603_Submission__c</fullName>
        <label>Last 1603 Submission</label>
        <picklist>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LocusSystemUploadFiles_LatestDPR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LocusSystemUploadFiles_LatestDPR</label>
        <referenceTo>Data_Processing_Request__c</referenceTo>
        <relationshipLabel>Systems</relationshipLabel>
        <relationshipName>Systems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LocusUploadFile_CreatedOn__c</fullName>
        <formula>LocusSystemUploadFiles_LatestDPR__r.Actual_Completion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LocusUploadFile_CreatedOn</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Locus_Registered_Date__c</fullName>
        <label>Monitoring Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Locus_Row_Id__c</fullName>
        <label>Locus Row Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monitoring_Platform__c</fullName>
        <label>Monitoring Platform</label>
        <picklist>
            <picklistValues>
                <fullName>Locus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enlighten</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Num_of_Channesl__c</fullName>
        <label># of Channels</label>
        <summaryForeignKey>System_Channel__c.System__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_of_Inverters__c</fullName>
        <label># of Inverters</label>
        <summaryFilterItems>
            <field>System_Serialized_Item__c.Item_Group_from_SI__c</field>
            <operation>equals</operation>
            <value>Inverter</value>
        </summaryFilterItems>
        <summaryForeignKey>System_Serialized_Item__c.System__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_of_Meter__c</fullName>
        <label># of Meter</label>
        <summaryFilterItems>
            <field>System_Serialized_Item__c.Item_Group_from_SI__c</field>
            <operation>equals</operation>
            <value>Smart Meter</value>
        </summaryFilterItems>
        <summaryForeignKey>System_Serialized_Item__c.System__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_of_Panels__c</fullName>
        <label># of Panels</label>
        <summaryFilterItems>
            <field>System_Serialized_Item__c.Item_Group_from_SI__c</field>
            <operation>equals</operation>
            <value>Panels</value>
        </summaryFilterItems>
        <summaryForeignKey>System_Serialized_Item__c.System__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Arrays__c</fullName>
        <label># of Arrays</label>
        <summaryForeignKey>Array__c.System__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Electric__c</fullName>
        <label># of Electric</label>
        <summaryFilterItems>
            <field>System_Serialized_Item__c.Item_Group_from_SI__c</field>
            <operation>equals</operation>
            <value>Electric</value>
        </summaryFilterItems>
        <summaryForeignKey>System_Serialized_Item__c.System__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PowerDash_Capacity_kW__c</fullName>
        <description>This is from the import from PD.  Going forward, Array data from SF should feed PD, not vice versa.</description>
        <inlineHelpText>This is from the import from PD.  Going forward, Array data from SF should feed PD, not vice versa.</inlineHelpText>
        <label>PowerDash Capacity (kW)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PowerDash_ID__c</fullName>
        <description>This is the GUID in PowerDash that can be used to get system config info from their API.</description>
        <externalId>true</externalId>
        <label>PowerDash ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Created_For_Opp_NumeriID__c</fullName>
        <formula>VALUE( Install_Project_Created_On__r.Opportunity__r.Numeric_ID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Created For Opp NumeriID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Created_For_Opportunity_ID__c</fullName>
        <formula>Install_Project_Created_On__r.Opportunity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Created For Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Opportunity_Created_For__c</fullName>
        <formula>HYPERLINK(Install_Project_Created_On__r.Opportunity__c, Install_Project_Created_On__r.Opportunity__r.Name  ,  &apos;/self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Opportunity Created For</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Text__c</fullName>
        <label>Project Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QS_Sales_Order_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the QStock Sales Order that triggered the creation of this system.</description>
        <label>QS Sales Order Created By</label>
        <referenceTo>Sales_Order__c</referenceTo>
        <relationshipLabel>Systems</relationshipLabel>
        <relationshipName>Systems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QS_Sales_Order_Number__c</fullName>
        <formula>QS_Sales_Order_Created_By__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QS_Sales_Order_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_P_Left_Warehouse_Date__c</fullName>
        <label>R&amp;P Left Warehouse Date from PV Install</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reservation_Date__c</fullName>
        <label>Reservation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reserve_This_System__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reserve This System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reserved_By__c</fullName>
        <label>Reserved By</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Rating_kW__c</fullName>
        <label>System Rating (kW)</label>
        <summarizedField>Array__c.Array_Rating_for_Rollup_kW__c</summarizedField>
        <summaryForeignKey>Array__c.System__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>System_Removal_Date__c</fullName>
        <label>System Removal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X1603_Due_Date__c</fullName>
        <label>1603 Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X1603_Identifier__c</fullName>
        <label>1603 Identifier</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1603_System__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1603 System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1603days__c</fullName>
        <formula>Today() - X1603_Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1603 due days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>System</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Install_Project_Created_On__c</columns>
        <columns>Number_of_Arrays__c</columns>
        <columns>Count_of_Serialized_Items__c</columns>
        <columns>PowerDash_Capacity_kW__c</columns>
        <columns>System_Rating_kW__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Project_Opportunity_Created_For__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Available_for_Redeploy</fullName>
        <columns>NAME</columns>
        <columns>Number_of_Arrays__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Available_For_Redeployment__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Available for Redeploy</label>
    </listViews>
    <nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>Systems Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Systems</pluralLabel>
    <recordTypes>
        <fullName>System</fullName>
        <active>true</active>
        <description>Main Record Type</description>
        <label>System</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_reserve_system_unless_available</fullName>
        <active>true</active>
        <description>Create validation rule that does not allow users to select checkbox &quot;Reserve this System&quot; unless checkbox &quot;Available for Redeployment&quot; has been checked off.</description>
        <errorConditionFormula>AND(NOT( Available_For_Redeployment__c ),
ISCHANGED(Reserve_This_System__c),
NOT(Priorvalue(Reserve_This_System__c))
)</errorConditionFormula>
        <errorDisplayField>Reserve_This_System__c</errorDisplayField>
        <errorMessage>This system cannot be reserved until it is cleared as available for redeployment.</errorMessage>
    </validationRules>
</CustomObject>